fix: fixed input fields on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -49,14 +49,14 @@ aside {
   display: flex;
   flex-direction: column;
   margin: 2em 0em;
-  max-width: 100%;
+  max-width: 40em;
 }
 
 form {
   margin-top: 2em;
   display: flex;
   flex-direction: column;
-  max-width: 35%;
+  max-width: 40em;
 }
 
 form > * + * {
